--- a/docs/posts/06wk-1.out.ipynb
+++ b/docs/posts/06wk-1.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 06wk-1: 합성곱신경망 (2)\n",
+        "# 06wk-1: 합성곱신경망 (2) – MNIST, Fashion-MNIST, ImageNet, CIFAR10\n",
         "\n",
         "최규빈  \n",
         "2024-04-03\n",
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "25cfc104-09c8-49be-8eda-ec5b5f28c13d"
+      "id": "db5a0964-8b25-4ce3-92b1-9bc7273073fe"
     },
     {
       "cell_type": "code",
@@ -33,11 +33,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "31dbe966-900f-4167-8093-5f907f7a8aa2"
+      "id": "7a657c4e-8cdc-45fd-835b-cf245336a899"
     },
     {
       "cell_type": "code",
-      "execution_count": 675,
+      "execution_count": 749,
       "metadata": {
         "tags": []
       },
@@ -46,6 +46,7 @@
         "import torch\n",
         "import torchvision\n",
         "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
         "from fastai.data.all import *\n",
         "from fastai.vision.all import * "
       ],
@@ -59,7 +60,7 @@
         "\n",
         "## A. transpose"
       ],
-      "id": "02fc769e-203b-4bb3-987c-f8dac272fd14"
+      "id": "e99aec8e-9e57-4b43-9b42-d88f45f721c5"
     },
     {
       "cell_type": "code",
@@ -100,7 +101,7 @@
       "source": [
         "## B. 행렬곱"
       ],
-      "id": "b51327bc-a638-4cc8-b13f-040aedd7f20b"
+      "id": "7b0ce265-72d5-47e2-ba09-cafe97c17c94"
     },
     {
       "cell_type": "code",
@@ -169,7 +170,7 @@
       "source": [
         "# 4. MNIST – 직접설계"
       ],
-      "id": "0b87bdbd-ea7a-4a9e-868a-0f201cc08e97"
+      "id": "3c5b816b-a609-4594-a98e-5eb182f0eeae"
     },
     {
       "cell_type": "code",
@@ -245,7 +246,7 @@
       "source": [
         "## A. y: (n,3)-float"
       ],
-      "id": "d29cc391-eba8-4783-b6e5-cd67dc15bec6"
+      "id": "d271726c-1ba3-4699-8ca2-28e669ef811d"
     },
     {
       "cell_type": "code",
@@ -308,7 +309,7 @@
       "source": [
         "## B. y: (n,)-int"
       ],
-      "id": "d047ed39-2e04-4bed-8b33-376ffcce37dd"
+      "id": "afb60b6e-03eb-4885-a349-a68e71b6d239"
     },
     {
       "cell_type": "code",
@@ -413,7 +414,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "290b830a-1381-4aa7-878a-297260246cb8"
+      "id": "98fe521e-71c1-49d9-8333-cabf0f419d6c"
     },
     {
       "cell_type": "code",
@@ -486,7 +487,7 @@
       "source": [
         "## A. torch"
       ],
-      "id": "b0e21e61-f640-4623-aed1-2c70971d6eb7"
+      "id": "f7e4a833-9e3c-4744-bde1-6b74987d710b"
     },
     {
       "cell_type": "code",
@@ -549,7 +550,7 @@
       "source": [
         "## B. fastai"
       ],
-      "id": "1c4176e9-753b-4f5f-9e72-f48fdfc4aae0"
+      "id": "3b6b22b2-0195-45ef-b54a-351ff53fd70a"
     },
     {
       "cell_type": "code",
@@ -628,7 +629,7 @@
         "\n",
         "`-` 재미삼아 써보면.."
       ],
-      "id": "11551ad5-e7f9-4d85-a58f-0447cdec5fef"
+      "id": "b9620333-cf41-4f8d-95f3-7ade5520616d"
     },
     {
       "cell_type": "code",
@@ -683,7 +684,7 @@
       "source": [
         "## C. 알렉스넷으로 ImageNet 적합 – HW"
       ],
-      "id": "6172512d-0cdc-4006-8516-a3a4d764a61b"
+      "id": "656a337f-7b78-459e-bb3d-0c9e4f5be6a7"
     },
     {
       "cell_type": "code",
@@ -707,7 +708,7 @@
         "\n",
         "`-` X,y를 얻자."
       ],
-      "id": "575fc6db-dfb1-45b8-8928-9fcea637e492"
+      "id": "3930e935-4ba4-4348-b41b-5dad255223bb"
     },
     {
       "cell_type": "code",
@@ -782,7 +783,7 @@
       "source": [
         "`-` 데이터를 시각화해보자."
       ],
-      "id": "e1e95782-db77-4253-b06d-f46f5933d69c"
+      "id": "4c7d64bb-bb66-4bfd-8c04-214f69d52c8d"
     },
     {
       "cell_type": "code",
@@ -816,7 +817,7 @@
         "\n",
         "`-` 아무튼 dls를 만들자."
       ],
-      "id": "8d650533-c68b-4a9d-bdc2-eb6017653f0e"
+      "id": "429a232c-8db6-4d49-9260-d546bc3ecf55"
     },
     {
       "cell_type": "code",
@@ -840,7 +841,7 @@
       "source": [
         "`-` 아래와 같이 쉽게 만들수도있음…"
       ],
-      "id": "29b55876-15d2-4895-aebd-0805b6de4fb6"
+      "id": "eac9c1c9-201e-4258-b0ef-774d0c6b4ae1"
     },
     {
       "cell_type": "code",
@@ -863,7 +864,7 @@
         "\n",
         "`-` 시도1: 이게 좀 힘들어요 ㅎㅎ"
       ],
-      "id": "3454a534-c271-4d61-ad53-06e907bc49fa"
+      "id": "5df3940d-165f-4030-901f-cbc666689b97"
     },
     {
       "cell_type": "code",
@@ -927,7 +928,7 @@
         "\n",
         "`-` 시도2: 셔플!"
       ],
-      "id": "ac364795-03a3-47de-b8f4-89d41010e679"
+      "id": "b5d457a8-2c83-45df-83e7-ed9cde08f0d6"
     },
     {
       "cell_type": "code",
@@ -989,7 +990,7 @@
       "source": [
         "`-` 시도3: 복잡하게.."
       ],
-      "id": "a91ba592-4b0d-4052-9136-81b068ec4a9b"
+      "id": "ccf91f1a-8c0a-431a-819d-81240d424681"
     },
     {
       "cell_type": "code",
@@ -1055,7 +1056,7 @@
         "\n",
         "`-` ResNet18을 다운로드"
       ],
-      "id": "e4187468-2dcf-4fdf-a206-3a64dedeeec5"
+      "id": "01942048-6418-44ff-9f51-304d8d6b7cac"
     },
     {
       "cell_type": "code",
@@ -1085,7 +1086,7 @@
       "source": [
         "`-` 마지막의 레이어만 수정"
       ],
-      "id": "8d786d1b-a5ec-4dc9-acf1-803a47749622"
+      "id": "e4ed0a5d-f6cb-4f6f-a671-644824593fd7"
     },
     {
       "cell_type": "code",
@@ -1105,7 +1106,7 @@
       "source": [
         "`-` 학습해보자."
       ],
-      "id": "be833700-4e9d-4c76-a247-08d4d22e52b9"
+      "id": "39a28909-f6bd-4ac7-a5a0-a1737dd0a385"
     },
     {
       "cell_type": "code",
@@ -1155,7 +1156,7 @@
       "source": [
         "`-` 좀 더 fastai에 가깝게.."
       ],
-      "id": "133d4bae-54d0-42ef-bfd7-8dc36bc1f6d4"
+      "id": "ab34fdc7-20b9-4919-aaf4-64b01e7326a9"
     },
     {
       "cell_type": "code",
@@ -1425,7 +1426,7 @@
         "\n",
         "[2] 저는 이 표현 너무 싫어해요"
       ],
-      "id": "3e41be16-29aa-415c-a707-6179d44d0d53"
+      "id": "65a2c01b-ff4b-4355-b39f-c01c85ad4c6e"
     }
   ],
   "nbformat": 4,
