--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "aa3bb25c-61a9-4149-98b1-2c46bf96ee89"
+      "id": "4468b6a5-0818-4431-bbd7-48c583f397e1"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "2ad1e0f7-804b-4f32-bdfb-4304d9a57dfe"
+      "id": "e03f805a-d7ae-4243-9f6b-507cd78956bd"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "71603c26-89a1-4d10-8cb2-5d976a633855"
+      "id": "00706857-36e1-4b2a-8d9d-2c18e860db96"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "4e4f7d02-ce99-4091-bcd2-828da8fdd02e"
+      "id": "70821ce7-6358-40f1-b636-d8b6defcb304"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "aa80e5cc-acb2-43c1-aac3-a94af7c51e36"
+      "id": "2e057f06-ef6a-49ae-9a62-85d8d8a00d06"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "97827e8f-e361-48a9-a04f-51631cd309b1"
+      "id": "5095518e-82b6-467d-8902-d25288bfd68d"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "c5e448dd-c9d5-4a5d-b159-6463565e2bb5"
+      "id": "23456748-ad44-4165-b120-fdc9e247fb1b"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "80f3eb26-d1f9-4ec9-bf5f-a2de8a650211"
+      "id": "3c69cff8-067b-4daa-a191-d0091127da26"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "6ff2559c-80d3-4355-b700-95a3908fe319"
+      "id": "5a74c539-3065-4177-ade6-88031f719450"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "96079abd-af75-4549-ba07-3d915f1d1f3d"
+      "id": "586f096c-9515-4773-b4f5-261fa088fa84"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "36021d22-f3dd-402a-a07c-8f14bd0e1a32"
+      "id": "2f7a9d94-edf4-42cb-bc61-dd1aaf1b1cc9"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "feaf918d-f544-4e43-af62-66019dac5b8e"
+      "id": "029a8e9a-ed31-410e-8f1a-edcb833e81be"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "10d7972e-7dad-4f2b-8fe4-03ce9e7e8f2f"
+      "id": "1f433207-58e1-4a23-a5b4-fdc2fb5710b1"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "345c5ba1-3e37-4af1-b67e-3613ee263958"
+      "id": "3620c0b0-e116-4681-8843-edb6c075a1d7"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "0b50d7b2-4375-46ec-b9cd-cddffc9a2943"
+      "id": "3f8a6295-34c1-41fb-809e-f7b2e35e2411"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "80295830-d8b6-4ef6-a4f4-cfa87ca2353a"
+      "id": "a7f95010-7019-4b1b-bab1-1591a9ecf739"
     },
     {
       "cell_type": "code",
