--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "e19d87bf-a685-40d6-950f-f6f9d51cb9a9"
+      "id": "553bc46c-9a8b-4566-a49b-ace25ccfe4eb"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "d96be9bf-b05d-4b5d-95db-a21bda8f2150"
+      "id": "1dd8c4df-ca7f-4cb3-a56c-954cc1785793"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "b0497c2b-65b6-4477-b811-7071019b269b"
+      "id": "86ee18ed-4a59-42ba-9c26-a0268abb7717"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "3ff7f9b3-3aed-478d-b412-7944ae2f8c44"
+      "id": "47bcca51-9b90-42a5-9db4-99bdba80bcd1"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "d22da241-1c41-47e1-9f2e-af70647128ae"
+      "id": "44dee5bb-2109-4c53-9446-c78b89e058f8"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "efcb4f55-05d1-44d7-adbc-0323d44f3801"
+      "id": "cfa1e3f7-7fc9-4d83-8910-b886edbda30e"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "2b4f4195-a250-4d44-960a-6337af55e920"
+      "id": "c47f4d2d-d8f8-4266-9508-cceb92092546"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "4c27676d-9bd2-42c5-91ed-a22b0dee13ef"
+      "id": "cab5d935-bae3-40ca-90c7-6952b57d053b"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "1d1173b6-1350-4c0c-a3fd-7a8cbbbbc4a1"
+      "id": "bb39a510-068e-4c98-b8f9-c99872e78ff5"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "f5f81a52-d5da-4e9d-ba1c-60449654d4c4"
+      "id": "4873ae24-856c-4973-8a1c-a68fd1de2cd3"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "21bb0aa9-48de-44cd-a40d-3b68b2be523c"
+      "id": "08e24241-afda-4986-a2ec-f8bf3a79d660"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "8d3478dc-b49f-458d-a3a9-ecfe653a3a95"
+      "id": "fdbd316b-b1a1-48f9-94b2-8eaf99868d5c"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "e5e14585-bc49-48c2-b988-5a265d83c1eb"
+      "id": "755e285a-5f8c-47e8-a341-c8614b318675"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure>\n",
+        "<figure class=\"margin-caption\">\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "31c4784c-5811-4a09-bd02-cd93e93e846b"
+      "id": "fa4a796c-d0ad-488a-bd15-a9e8c9e1d4d2"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "3294c5a9-5f30-4101-a7e8-015af5f4b144"
+      "id": "279354b4-dd69-4271-85a9-c065d4be49c8"
     }
   ],
   "nbformat": 4,
