--- a/docs/posts/06wk-2.out.ipynb
+++ b/docs/posts/06wk-2.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 06wk-2: 합성곱신경망 (2) – MNIST, Fashion-MNIST, ImageNet, CIFAR10\n",
+        "# 06wk-2: 합성곱신경망 (3) – XAI (Class Activation Map, CAM)\n",
         "\n",
         "최규빈  \n",
         "2024-04-03\n",
@@ -243,7 +243,7 @@
         "\n",
         "[2] 저는 이 표현 너무 싫어해요"
       ],
-      "id": "251ce0ae-5ee2-4b75-9763-d6d6b6421f43"
+      "id": "dd5353a2-85b8-4bcd-a51c-c03fda963421"
     }
   ],
   "nbformat": 4,
