--- a/docs/posts/06wk-1.out.ipynb
+++ b/docs/posts/06wk-1.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/06wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "8bf0f7d9-9c21-4b89-8bd4-26b92f049ab3"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-wjNGgd4gmQJbQ66NLjUC2y&si=dusDZAwGOJS9TOKJ >}}"
-      ],
-      "id": "12ba7872-1155-4c2f-8f94-e201f3a3ea25"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-wTzMRmZzvr2TL12DNo6jXF&si=RnG6_-uhn9Yb57nU>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "e590310c-fd88-4946-8e67-ed351609daa7"
+      "id": "dc7016c3-bd5c-4278-be7d-e8204f20f878"
     },
     {
       "cell_type": "code",
@@ -60,7 +44,7 @@
         "\n",
         "## A. transpose"
       ],
-      "id": "bd224edf-e2ec-4591-9be8-08648c340b38"
+      "id": "e3033077-1a66-4546-9927-9f539db36da1"
     },
     {
       "cell_type": "code",
@@ -105,7 +89,7 @@
       "source": [
         "## B. 행렬곱"
       ],
-      "id": "123fa667-6e2d-40ad-931e-67ea0487eb6c"
+      "id": "f69b9135-76d5-4b3d-a302-19dd7f010032"
     },
     {
       "cell_type": "code",
@@ -174,7 +158,7 @@
       "source": [
         "## C. 이미지변환"
       ],
-      "id": "cecac99b-a2a9-448e-80a0-c545118857c5"
+      "id": "9d4c0b0e-604c-409c-acb9-99465a5e3c7e"
     },
     {
       "cell_type": "code",
@@ -230,7 +214,7 @@
       "source": [
         "만약에 `img_torch`를 matplotlib 으로 보고싶다면?"
       ],
-      "id": "a9691cdf-266e-4b48-a56c-f6a1adbadc31"
+      "id": "44e548ae-565d-4e3e-98fd-5688a97903b4"
     },
     {
       "cell_type": "code",
@@ -280,7 +264,7 @@
       "source": [
         "# 4. MNIST – 직접설계"
       ],
-      "id": "fc44ec24-31f8-41fe-916b-affa780f2184"
+      "id": "6bf2ad58-f6d5-4435-950a-1ed18ff989be"
     },
     {
       "cell_type": "code",
@@ -356,7 +340,7 @@
       "source": [
         "## A. y: (n,3)-float"
       ],
-      "id": "c3a751f6-6cbb-403b-b68f-8e181937664a"
+      "id": "bdf0daec-8b24-4928-ad2a-ef3c74440035"
     },
     {
       "cell_type": "code",
@@ -419,7 +403,7 @@
       "source": [
         "## B. y: (n,)-int"
       ],
-      "id": "0e461d50-5fc4-4022-af32-f995846c25ed"
+      "id": "7f82d902-a70f-4bd7-ae30-de21cd07c409"
     },
     {
       "cell_type": "code",
@@ -524,7 +508,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "d3d5adba-68ce-48e3-8f5b-52fdab6d44f4"
+      "id": "fbbb6c4c-9501-4414-ae2c-2c990e2244d7"
     },
     {
       "cell_type": "code",
@@ -597,7 +581,7 @@
       "source": [
         "## A. torch"
       ],
-      "id": "326a63b6-c1eb-4324-aa6c-79aa40f58748"
+      "id": "9d7b4ffc-999f-4144-8277-3bdc168ea5bf"
     },
     {
       "cell_type": "code",
@@ -660,7 +644,7 @@
       "source": [
         "## B. fastai"
       ],
-      "id": "7e4a6d8d-bdad-4be7-a148-376ec2293022"
+      "id": "b61ae381-c6fb-47ff-bbe4-acf973c3623b"
     },
     {
       "cell_type": "code",
@@ -739,7 +723,7 @@
         "\n",
         "`-` 재미삼아 써보면.."
       ],
-      "id": "f40b9b24-45d2-40da-bc78-0aa8535ce6be"
+      "id": "8c52c6c3-9d19-4ef4-b1e1-a7160f66b183"
     },
     {
       "cell_type": "code",
@@ -795,7 +779,7 @@
         "`-` 참고사항: `torchvision.models.alexnet()`을 이용하여 네크워크를\n",
         "선언할 수도 있음."
       ],
-      "id": "6056f7ca-16c8-45d0-a41d-6b14bbcd382f"
+      "id": "a989aeec-1299-4ae4-84b7-de1a45b8ae09"
     },
     {
       "cell_type": "code",
@@ -829,7 +813,7 @@
         "\n",
         "## C. 알렉스넷으로 ImageNet 적합 – HW"
       ],
-      "id": "17237533-7011-4e0f-b2bc-34c4b71b3964"
+      "id": "7ce810e1-253a-4de5-a499-e708a05eca29"
     },
     {
       "cell_type": "code",
@@ -853,7 +837,7 @@
         "\n",
         "`-` X,y를 얻자."
       ],
-      "id": "4d5c81df-0282-43de-b6cf-bf2a76de3e9d"
+      "id": "7db0508a-fce8-4a2d-9f49-690d7887e518"
     },
     {
       "cell_type": "code",
@@ -928,7 +912,7 @@
       "source": [
         "`-` 데이터를 시각화해보자."
       ],
-      "id": "9dce08a6-e3b5-423d-92e4-9eafec3f60ba"
+      "id": "24f18772-e41f-4b67-89b6-398d84be3d8c"
     },
     {
       "cell_type": "code",
@@ -962,7 +946,7 @@
         "\n",
         "`-` dls를 만들자."
       ],
-      "id": "fd2526f6-568b-4bf6-a66b-f1e123d7ae68"
+      "id": "d5a1b300-4983-4fdb-9de8-78fd1e445b5c"
     },
     {
       "cell_type": "code",
@@ -986,7 +970,7 @@
       "source": [
         "`-` 아래와 같이 쉽게 만들수도있음…"
       ],
-      "id": "c245f1bd-3598-4305-89f5-bc0cefa72d59"
+      "id": "fb3cf928-db91-4f9d-856b-0fb4d15c7cc1"
     },
     {
       "cell_type": "code",
@@ -1009,7 +993,7 @@
         "\n",
         "`-` 시도1: 이게 좀 힘들어요 ㅎㅎ"
       ],
-      "id": "322d5966-b834-4bce-9f6d-313ad171e57e"
+      "id": "01821718-61e6-4b32-b534-fdc3a3ada790"
     },
     {
       "cell_type": "code",
@@ -1073,7 +1057,7 @@
         "\n",
         "`-` 시도2: 셔플!"
       ],
-      "id": "9323e564-9b54-4a5e-9591-db5a2afa1479"
+      "id": "eab8b78b-2db0-4a95-964d-f9157ca9bf99"
     },
     {
       "cell_type": "code",
@@ -1137,7 +1121,7 @@
         "\n",
         "`-` 시도3: 복잡하게.."
       ],
-      "id": "5e092723-eb86-465e-bebd-f6bce11ebd09"
+      "id": "98cbb3f7-1332-4892-930f-d0c1595346b8"
     },
     {
       "cell_type": "code",
@@ -1203,7 +1187,7 @@
         "\n",
         "`-` ResNet18을 다운로드"
       ],
-      "id": "66f179c0-f185-4522-9cf3-1edb69d9c84b"
+      "id": "5366dafd-9184-429b-ba65-428483fc9ef2"
     },
     {
       "cell_type": "code",
@@ -1224,7 +1208,7 @@
       "source": [
         "`-` 마지막의 레이어만 수정"
       ],
-      "id": "4faeeb3d-44ab-4c08-b1e5-16f79260df39"
+      "id": "daac7260-9912-4888-b175-a88b5b71080f"
     },
     {
       "cell_type": "code",
@@ -1244,7 +1228,7 @@
       "source": [
         "`-` 학습해보자."
       ],
-      "id": "dde3d716-db10-4a6d-a1e0-759029b15e2d"
+      "id": "c96dc80d-973d-4d03-96d0-f5ffe42feaa9"
     },
     {
       "cell_type": "code",
@@ -1305,7 +1289,7 @@
         "Classification with Deep Convolutional Neural Networks.” *Advances in\n",
         "Neural Information Processing Systems* 25."
       ],
-      "id": "3ea18a13-bce7-4026-8df9-ac017fa59236"
+      "id": "17966420-394e-4f76-8658-f3771411a655"
     }
   ],
   "nbformat": 4,
