--- a/docs/posts/06wk-1.out.ipynb
+++ b/docs/posts/06wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "cb552212-44e8-419e-8979-04ad16e18144"
+      "id": "559a4e73-14f9-4077-bf8b-9e0c4481e610"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "## A. transpose"
       ],
-      "id": "3e21c403-9d5c-45d5-9302-522f0f5c711c"
+      "id": "7022cb87-6f0f-43b1-bdb9-ebc308182075"
     },
     {
       "cell_type": "code",
@@ -89,7 +89,7 @@
       "source": [
         "## B. 행렬곱"
       ],
-      "id": "671a1e95-2b53-456b-82ae-b73c1b935372"
+      "id": "68a0babd-ef08-4666-836a-ad2825f48ffe"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
       "source": [
         "## C. 이미지변환"
       ],
-      "id": "10fe091f-24d3-4d8f-970d-75dc7fae6d1f"
+      "id": "c03c1858-1941-418c-ad27-95e73ee8e968"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
       "source": [
         "만약에 `img_torch`를 matplotlib 으로 보고싶다면?"
       ],
-      "id": "688e6113-2c0b-4821-99b2-52aa650569b9"
+      "id": "df275648-4312-4150-94c1-3af3e9fa51d4"
     },
     {
       "cell_type": "code",
@@ -264,7 +264,7 @@
       "source": [
         "# 4. MNIST – 직접설계"
       ],
-      "id": "6c9b0bd4-2367-4e54-a26f-081c4241779e"
+      "id": "730c2d40-b988-4a74-aafb-19209bb4beb1"
     },
     {
       "cell_type": "code",
@@ -340,7 +340,7 @@
       "source": [
         "## A. y: (n,3)-float"
       ],
-      "id": "83a07bef-fc16-4f08-99c2-c8c357d3037d"
+      "id": "e0807dc4-5029-448e-b703-366a291ae9bc"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
       "source": [
         "## B. y: (n,)-int"
       ],
-      "id": "fdb6668c-ff5d-4a94-b885-905ddca2d602"
+      "id": "fdf1c3e9-1d58-4881-b767-ce2dd7b6060e"
     },
     {
       "cell_type": "code",
@@ -508,7 +508,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "ae2084d9-c07e-4c0b-ab0d-83d8cd50bf29"
+      "id": "41bf8ed4-2833-4623-a362-bc14af05f1d3"
     },
     {
       "cell_type": "code",
@@ -581,7 +581,7 @@
       "source": [
         "## A. torch"
       ],
-      "id": "4fb33cab-ef75-404f-8b9e-e4ef208e1dc8"
+      "id": "dcca87a3-3eb1-441a-a1cf-be557e707997"
     },
     {
       "cell_type": "code",
@@ -644,7 +644,7 @@
       "source": [
         "## B. fastai"
       ],
-      "id": "5ad09ef2-a2eb-4ef8-aace-ab97df7ac285"
+      "id": "da7955b1-24fe-4730-96be-35d2f81edb46"
     },
     {
       "cell_type": "code",
@@ -723,7 +723,7 @@
         "\n",
         "`-` 재미삼아 써보면.."
       ],
-      "id": "2be22ff5-be81-40ea-9c5f-405687b74a98"
+      "id": "87ab285d-0b22-48ae-86d2-505ef4cf9c41"
     },
     {
       "cell_type": "code",
@@ -779,7 +779,7 @@
         "`-` 참고사항: `torchvision.models.alexnet()`을 이용하여 네크워크를\n",
         "선언할 수도 있음."
       ],
-      "id": "22668cc4-28a8-4194-a680-315149fa8869"
+      "id": "e2e98392-6a98-47f3-87a8-0be004d9b4a3"
     },
     {
       "cell_type": "code",
@@ -813,7 +813,7 @@
         "\n",
         "## C. 알렉스넷으로 ImageNet 적합 – HW"
       ],
-      "id": "3f79d90c-0700-4ce9-843c-eff5f9846940"
+      "id": "13d04cd1-3ef2-478c-a46b-f89978ee4ccd"
     },
     {
       "cell_type": "code",
@@ -837,7 +837,7 @@
         "\n",
         "`-` X,y를 얻자."
       ],
-      "id": "e0bbbdf3-6ad1-417f-887c-e1330ed1e698"
+      "id": "f9c09aae-4982-421d-8beb-170b5c94a1fe"
     },
     {
       "cell_type": "code",
@@ -912,7 +912,7 @@
       "source": [
         "`-` 데이터를 시각화해보자."
       ],
-      "id": "13a658d0-102c-4a1d-9b6a-1bae517dd78f"
+      "id": "5b637b0f-e9a2-4990-9ffb-ace17321325f"
     },
     {
       "cell_type": "code",
@@ -946,7 +946,7 @@
         "\n",
         "`-` dls를 만들자."
       ],
-      "id": "d602c35d-3edf-41a3-967d-1fa4784b0c46"
+      "id": "291d29c3-1388-467a-815b-978f5e37c94c"
     },
     {
       "cell_type": "code",
@@ -970,7 +970,7 @@
       "source": [
         "`-` 아래와 같이 쉽게 만들수도있음…"
       ],
-      "id": "2d9bb51b-5b75-47e5-8bf4-58e4c58f88d5"
+      "id": "db2f4b21-c519-43ad-9566-fe2bc74d72c1"
     },
     {
       "cell_type": "code",
@@ -993,7 +993,7 @@
         "\n",
         "`-` 시도1: 이게 좀 힘들어요 ㅎㅎ"
       ],
-      "id": "5b38401f-cd15-4628-af47-d2784e5ebf43"
+      "id": "d44f6141-dcad-4fc5-b607-a875f35cda09"
     },
     {
       "cell_type": "code",
@@ -1057,7 +1057,7 @@
         "\n",
         "`-` 시도2: 셔플!"
       ],
-      "id": "b6e3188a-da3b-40fc-9ea9-1963bce867c6"
+      "id": "cb266285-0ce8-437c-a5f2-4fd248b8f055"
     },
     {
       "cell_type": "code",
@@ -1121,7 +1121,7 @@
         "\n",
         "`-` 시도3: 복잡하게.."
       ],
-      "id": "8902e018-9b50-4f1e-9759-4af8a2c13c21"
+      "id": "47a652d9-eb52-480e-b5f5-7f2adc3624fb"
     },
     {
       "cell_type": "code",
@@ -1145,6 +1145,7 @@
         "ds2 = torch.utils.data.TensorDataset(XX,yy)\n",
         "dl1 = torch.utils.data.DataLoader(ds1,batch_size=256,shuffle=True)\n",
         "dl2 = torch.utils.data.DataLoader(ds2,batch_size=100)\n",
+        "dls = DataLoaders(dl1,dl2)\n",
         "# Step2:\n",
         "net1 = torch.nn.Sequential(\n",
         "    torch.nn.Conv2d(3,256,(5,5)),\n",
@@ -1187,7 +1188,7 @@
         "\n",
         "`-` ResNet18을 다운로드"
       ],
-      "id": "432af1bb-bfa5-4fba-be32-d7db51472c94"
+      "id": "78d21829-f80b-493e-8272-a8b9f9aa487c"
     },
     {
       "cell_type": "code",
@@ -1208,7 +1209,7 @@
       "source": [
         "`-` 마지막의 레이어만 수정"
       ],
-      "id": "65fe1170-7c7d-4f39-ba97-c1f15114675f"
+      "id": "fadf9891-6395-463b-96c4-30b583026656"
     },
     {
       "cell_type": "code",
@@ -1228,7 +1229,7 @@
       "source": [
         "`-` 학습해보자."
       ],
-      "id": "28d9167e-3af5-4736-a51f-b56825e7a6c1"
+      "id": "24908c4b-b296-4ade-9a28-b3ee5b2754b9"
     },
     {
       "cell_type": "code",
@@ -1251,7 +1252,8 @@
         "ds1 = torch.utils.data.TensorDataset(X,y)\n",
         "ds2 = torch.utils.data.TensorDataset(XX,yy)\n",
         "dl1 = torch.utils.data.DataLoader(ds1,batch_size=64,shuffle=True)\n",
-        "dl2 = torch.utils.data.DataLoader(ds2,batch_size=10000)\n",
+        "dl2 = torch.utils.data.DataLoader(ds2,batch_size=100)\n",
+        "dls = DataLoaders(dl1,dl2)\n",
         "# Step2:\n",
         "net = torchvision.models.resnet18()\n",
         "net.fc = torch.nn.Linear(512,10)\n",
@@ -1289,7 +1291,7 @@
         "Classification with Deep Convolutional Neural Networks.” *Advances in\n",
         "Neural Information Processing Systems* 25."
       ],
-      "id": "17a08b7c-5bfb-497e-b8ba-dcaab0b7fd05"
+      "id": "fe4a3086-1269-484d-97a5-77ec6425bbdb"
     }
   ],
   "nbformat": 4,
