--- a/docs/posts/06wk-1.out.ipynb
+++ b/docs/posts/06wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "559a4e73-14f9-4077-bf8b-9e0c4481e610"
+      "id": "81157bda-71c6-4332-a746-fa272ef8708e"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "## A. transpose"
       ],
-      "id": "7022cb87-6f0f-43b1-bdb9-ebc308182075"
+      "id": "02fd0ab3-9e75-4567-8ad0-9bdfeceee450"
     },
     {
       "cell_type": "code",
@@ -89,7 +89,7 @@
       "source": [
         "## B. 행렬곱"
       ],
-      "id": "68a0babd-ef08-4666-836a-ad2825f48ffe"
+      "id": "c82ff3b7-49d4-491c-99f1-87100a6d6cb7"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
       "source": [
         "## C. 이미지변환"
       ],
-      "id": "c03c1858-1941-418c-ad27-95e73ee8e968"
+      "id": "3502613f-deff-4389-8730-993cfa6e4cb5"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
       "source": [
         "만약에 `img_torch`를 matplotlib 으로 보고싶다면?"
       ],
-      "id": "df275648-4312-4150-94c1-3af3e9fa51d4"
+      "id": "20df309b-eb39-47b9-9629-39bc9cfa0d19"
     },
     {
       "cell_type": "code",
@@ -264,7 +264,7 @@
       "source": [
         "# 4. MNIST – 직접설계"
       ],
-      "id": "730c2d40-b988-4a74-aafb-19209bb4beb1"
+      "id": "2d30fa94-b8f5-42e6-bf86-eaf203359484"
     },
     {
       "cell_type": "code",
@@ -340,7 +340,7 @@
       "source": [
         "## A. y: (n,3)-float"
       ],
-      "id": "e0807dc4-5029-448e-b703-366a291ae9bc"
+      "id": "61fd27e1-0ffe-44b6-828b-a39c0ecf451b"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
       "source": [
         "## B. y: (n,)-int"
       ],
-      "id": "fdf1c3e9-1d58-4881-b767-ce2dd7b6060e"
+      "id": "e52ff5c5-c207-4a3a-aa59-806f5351a334"
     },
     {
       "cell_type": "code",
@@ -508,7 +508,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "41bf8ed4-2833-4623-a362-bc14af05f1d3"
+      "id": "cbcace80-d5d0-46a2-bf30-ab8bf1cd8da7"
     },
     {
       "cell_type": "code",
@@ -581,7 +581,7 @@
       "source": [
         "## A. torch"
       ],
-      "id": "dcca87a3-3eb1-441a-a1cf-be557e707997"
+      "id": "246d1bcd-f4fe-40c4-a1ea-408235f19849"
     },
     {
       "cell_type": "code",
@@ -644,7 +644,7 @@
       "source": [
         "## B. fastai"
       ],
-      "id": "da7955b1-24fe-4730-96be-35d2f81edb46"
+      "id": "929ed01b-5783-47ea-abdc-2f19d09874e2"
     },
     {
       "cell_type": "code",
@@ -723,7 +723,7 @@
         "\n",
         "`-` 재미삼아 써보면.."
       ],
-      "id": "87ab285d-0b22-48ae-86d2-505ef4cf9c41"
+      "id": "918bc1d0-646b-401b-a192-d867fce4db61"
     },
     {
       "cell_type": "code",
@@ -779,7 +779,7 @@
         "`-` 참고사항: `torchvision.models.alexnet()`을 이용하여 네크워크를\n",
         "선언할 수도 있음."
       ],
-      "id": "e2e98392-6a98-47f3-87a8-0be004d9b4a3"
+      "id": "cff6f940-d473-43fd-bd87-682aa338d6fc"
     },
     {
       "cell_type": "code",
@@ -813,7 +813,7 @@
         "\n",
         "## C. 알렉스넷으로 ImageNet 적합 – HW"
       ],
-      "id": "13d04cd1-3ef2-478c-a46b-f89978ee4ccd"
+      "id": "e422b307-5e9f-48b1-99a3-acd7ab0d2d73"
     },
     {
       "cell_type": "code",
@@ -837,7 +837,7 @@
         "\n",
         "`-` X,y를 얻자."
       ],
-      "id": "f9c09aae-4982-421d-8beb-170b5c94a1fe"
+      "id": "5398bbf7-4b14-4522-aa5d-b705b37a7fa6"
     },
     {
       "cell_type": "code",
@@ -912,7 +912,7 @@
       "source": [
         "`-` 데이터를 시각화해보자."
       ],
-      "id": "5b637b0f-e9a2-4990-9ffb-ace17321325f"
+      "id": "adcfa5e6-629e-4911-ad7f-e5dba28dc38d"
     },
     {
       "cell_type": "code",
@@ -946,7 +946,7 @@
         "\n",
         "`-` dls를 만들자."
       ],
-      "id": "291d29c3-1388-467a-815b-978f5e37c94c"
+      "id": "e9013741-85eb-41d6-981e-17c8b2c78630"
     },
     {
       "cell_type": "code",
@@ -970,7 +970,7 @@
       "source": [
         "`-` 아래와 같이 쉽게 만들수도있음…"
       ],
-      "id": "db2f4b21-c519-43ad-9566-fe2bc74d72c1"
+      "id": "029b3f34-3017-4946-b650-d7105ab56869"
     },
     {
       "cell_type": "code",
@@ -993,7 +993,7 @@
         "\n",
         "`-` 시도1: 이게 좀 힘들어요 ㅎㅎ"
       ],
-      "id": "d44f6141-dcad-4fc5-b607-a875f35cda09"
+      "id": "d88b6597-9940-4512-a27d-e6ba8c17f01c"
     },
     {
       "cell_type": "code",
@@ -1057,7 +1057,7 @@
         "\n",
         "`-` 시도2: 셔플!"
       ],
-      "id": "cb266285-0ce8-437c-a5f2-4fd248b8f055"
+      "id": "203100e3-3df0-40d5-bfc0-728dc50decd2"
     },
     {
       "cell_type": "code",
@@ -1121,7 +1121,7 @@
         "\n",
         "`-` 시도3: 복잡하게.."
       ],
-      "id": "47a652d9-eb52-480e-b5f5-7f2adc3624fb"
+      "id": "2cb59d5e-ae0d-445d-9e04-1e4b9b33db31"
     },
     {
       "cell_type": "code",
@@ -1174,9 +1174,10 @@
         "# Step3:\n",
         "lrnr.fit(10)\n",
         "# Step4: \n",
-        "lrnr.model.to(\"cpu\")\n",
-        "print(f'train: {(lrnr.model(X).data.argmax(axis=1) == y).float().mean():.4f}')\n",
-        "print(f'val: {(lrnr.model(XX).data.argmax(axis=1) == yy).float().mean():.4f}')"
+        "# 코랩사용시 아래는 주석처리할것 (코랩의 RAM이 충분하지 않음, 결재요구함) \n",
+        "# lrnr.model.to(\"cpu\")\n",
+        "# print(f'train: {(lrnr.model(X).data.argmax(axis=1) == y).float().mean():.4f}')\n",
+        "# print(f'val: {(lrnr.model(XX).data.argmax(axis=1) == yy).float().mean():.4f}')"
       ],
       "id": "80d4267a-1897-42ac-8103-b332bb35db1a"
     },
@@ -1188,7 +1189,7 @@
         "\n",
         "`-` ResNet18을 다운로드"
       ],
-      "id": "78d21829-f80b-493e-8272-a8b9f9aa487c"
+      "id": "aa983ed5-ca0a-4ef6-8004-4260aae25442"
     },
     {
       "cell_type": "code",
@@ -1209,7 +1210,7 @@
       "source": [
         "`-` 마지막의 레이어만 수정"
       ],
-      "id": "fadf9891-6395-463b-96c4-30b583026656"
+      "id": "2d1d494d-fcab-4df8-8fe9-52dbf03cb9a4"
     },
     {
       "cell_type": "code",
@@ -1229,7 +1230,7 @@
       "source": [
         "`-` 학습해보자."
       ],
-      "id": "24908c4b-b296-4ade-9a28-b3ee5b2754b9"
+      "id": "a798a5c5-4b09-4bb3-9f01-cdbcf682953e"
     },
     {
       "cell_type": "code",
@@ -1268,9 +1269,10 @@
         "# Step3:\n",
         "lrnr.fit(10)\n",
         "# Step4: \n",
-        "lrnr.model.to(\"cpu\")\n",
-        "print(f'train: {(lrnr.model(X).data.argmax(axis=1) == y).float().mean():.4f}')\n",
-        "print(f'val: {(lrnr.model(XX).data.argmax(axis=1) == yy).float().mean():.4f}')"
+        "# 코랩사용시 아래는 주석처리할것 (코랩의 RAM이 충분하지 않음, 결재요구함) \n",
+        "# lrnr.model.to(\"cpu\")\n",
+        "# print(f'train: {(lrnr.model(X).data.argmax(axis=1) == y).float().mean():.4f}') # \n",
+        "# print(f'val: {(lrnr.model(XX).data.argmax(axis=1) == yy).float().mean():.4f}')"
       ],
       "id": "ebaf1a49-349d-457a-b3f2-99137b22c1d9"
     },
@@ -1291,7 +1293,7 @@
         "Classification with Deep Convolutional Neural Networks.” *Advances in\n",
         "Neural Information Processing Systems* 25."
       ],
-      "id": "fe4a3086-1269-484d-97a5-77ec6425bbdb"
+      "id": "fc1380e6-8927-4ee1-b95a-dea726aed02a"
     }
   ],
   "nbformat": 4,
