--- a/docs/posts/06wk-1.out.ipynb
+++ b/docs/posts/06wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "81157bda-71c6-4332-a746-fa272ef8708e"
+      "id": "781694c8-7e26-4859-8a27-b7d563c32b0a"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "## A. transpose"
       ],
-      "id": "02fd0ab3-9e75-4567-8ad0-9bdfeceee450"
+      "id": "750b9881-ff85-4f46-af1d-b71ce5a68776"
     },
     {
       "cell_type": "code",
@@ -89,7 +89,7 @@
       "source": [
         "## B. 행렬곱"
       ],
-      "id": "c82ff3b7-49d4-491c-99f1-87100a6d6cb7"
+      "id": "59057f1a-c8e3-4cef-aa7c-aad1c36ff318"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
       "source": [
         "## C. 이미지변환"
       ],
-      "id": "3502613f-deff-4389-8730-993cfa6e4cb5"
+      "id": "d3de539d-72d1-44d5-8a49-9391d858b420"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
       "source": [
         "만약에 `img_torch`를 matplotlib 으로 보고싶다면?"
       ],
-      "id": "20df309b-eb39-47b9-9629-39bc9cfa0d19"
+      "id": "5d7b5c51-141d-4d7a-ac96-d2dab22e3ef6"
     },
     {
       "cell_type": "code",
@@ -264,7 +264,7 @@
       "source": [
         "# 4. MNIST – 직접설계"
       ],
-      "id": "2d30fa94-b8f5-42e6-bf86-eaf203359484"
+      "id": "9ce6beb9-7e71-416d-8870-c76b3f3c2915"
     },
     {
       "cell_type": "code",
@@ -340,7 +340,7 @@
       "source": [
         "## A. y: (n,3)-float"
       ],
-      "id": "61fd27e1-0ffe-44b6-828b-a39c0ecf451b"
+      "id": "f65b9bea-6743-4b15-9db3-0830725d1a14"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
       "source": [
         "## B. y: (n,)-int"
       ],
-      "id": "e52ff5c5-c207-4a3a-aa59-806f5351a334"
+      "id": "a323a668-c8dc-43c7-a15b-2173dd01e47a"
     },
     {
       "cell_type": "code",
@@ -508,7 +508,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "cbcace80-d5d0-46a2-bf30-ab8bf1cd8da7"
+      "id": "7b052d23-e3c2-4bb4-9d8c-d474619c0dd3"
     },
     {
       "cell_type": "code",
@@ -581,7 +581,7 @@
       "source": [
         "## A. torch"
       ],
-      "id": "246d1bcd-f4fe-40c4-a1ea-408235f19849"
+      "id": "eead1629-f723-4475-9e59-a0548b65464c"
     },
     {
       "cell_type": "code",
@@ -644,7 +644,7 @@
       "source": [
         "## B. fastai"
       ],
-      "id": "929ed01b-5783-47ea-abdc-2f19d09874e2"
+      "id": "84be34e5-3351-4430-84d0-a777bd08b1bb"
     },
     {
       "cell_type": "code",
@@ -723,7 +723,7 @@
         "\n",
         "`-` 재미삼아 써보면.."
       ],
-      "id": "918bc1d0-646b-401b-a192-d867fce4db61"
+      "id": "bef22672-d824-40b9-83b4-6581107e3f02"
     },
     {
       "cell_type": "code",
@@ -779,7 +779,7 @@
         "`-` 참고사항: `torchvision.models.alexnet()`을 이용하여 네크워크를\n",
         "선언할 수도 있음."
       ],
-      "id": "cff6f940-d473-43fd-bd87-682aa338d6fc"
+      "id": "d215151d-8085-4f8d-9fd5-b369ac9bb302"
     },
     {
       "cell_type": "code",
@@ -813,7 +813,7 @@
         "\n",
         "## C. 알렉스넷으로 ImageNet 적합 – HW"
       ],
-      "id": "e422b307-5e9f-48b1-99a3-acd7ab0d2d73"
+      "id": "72945fcf-0293-4b8a-9cdf-23bfa0722382"
     },
     {
       "cell_type": "code",
@@ -837,7 +837,7 @@
         "\n",
         "`-` X,y를 얻자."
       ],
-      "id": "5398bbf7-4b14-4522-aa5d-b705b37a7fa6"
+      "id": "566e3689-45f2-4f0f-9240-fbcd57987816"
     },
     {
       "cell_type": "code",
@@ -912,7 +912,7 @@
       "source": [
         "`-` 데이터를 시각화해보자."
       ],
-      "id": "adcfa5e6-629e-4911-ad7f-e5dba28dc38d"
+      "id": "114f8394-7d75-4fee-b150-2416bacc741c"
     },
     {
       "cell_type": "code",
@@ -946,7 +946,7 @@
         "\n",
         "`-` dls를 만들자."
       ],
-      "id": "e9013741-85eb-41d6-981e-17c8b2c78630"
+      "id": "d15ffff0-0e11-493b-a9d7-7936c85f60dd"
     },
     {
       "cell_type": "code",
@@ -970,7 +970,7 @@
       "source": [
         "`-` 아래와 같이 쉽게 만들수도있음…"
       ],
-      "id": "029b3f34-3017-4946-b650-d7105ab56869"
+      "id": "f7d40932-3fec-49fc-8f6a-dbc655f9288e"
     },
     {
       "cell_type": "code",
@@ -993,7 +993,7 @@
         "\n",
         "`-` 시도1: 이게 좀 힘들어요 ㅎㅎ"
       ],
-      "id": "d88b6597-9940-4512-a27d-e6ba8c17f01c"
+      "id": "7ae60cdb-7796-485a-bdce-d89a9b2b6d99"
     },
     {
       "cell_type": "code",
@@ -1057,7 +1057,7 @@
         "\n",
         "`-` 시도2: 셔플!"
       ],
-      "id": "203100e3-3df0-40d5-bfc0-728dc50decd2"
+      "id": "1718b496-faba-4c79-b0fa-8bee5cc842e5"
     },
     {
       "cell_type": "code",
@@ -1121,7 +1121,7 @@
         "\n",
         "`-` 시도3: 복잡하게.."
       ],
-      "id": "2cb59d5e-ae0d-445d-9e04-1e4b9b33db31"
+      "id": "957b06ed-9e17-413f-8f4a-703b1f6a9cdc"
     },
     {
       "cell_type": "code",
@@ -1174,7 +1174,7 @@
         "# Step3:\n",
         "lrnr.fit(10)\n",
         "# Step4: \n",
-        "# 코랩사용시 아래는 주석처리할것 (코랩의 RAM이 충분하지 않음, 결재요구함) \n",
+        "# 코랩사용시 아래는 주석처리할것 (이유: 코랩의 RAM이 충분하지 않음) valiation set의 accuracy는 fastai결과로 확인할것. \n",
         "# lrnr.model.to(\"cpu\")\n",
         "# print(f'train: {(lrnr.model(X).data.argmax(axis=1) == y).float().mean():.4f}')\n",
         "# print(f'val: {(lrnr.model(XX).data.argmax(axis=1) == yy).float().mean():.4f}')"
@@ -1189,7 +1189,7 @@
         "\n",
         "`-` ResNet18을 다운로드"
       ],
-      "id": "aa983ed5-ca0a-4ef6-8004-4260aae25442"
+      "id": "a03da1ef-1ee8-4bca-a1bc-0df567a51765"
     },
     {
       "cell_type": "code",
@@ -1210,7 +1210,7 @@
       "source": [
         "`-` 마지막의 레이어만 수정"
       ],
-      "id": "2d1d494d-fcab-4df8-8fe9-52dbf03cb9a4"
+      "id": "25621a84-8fd7-422c-8d2b-9ba4d0d34142"
     },
     {
       "cell_type": "code",
@@ -1230,7 +1230,7 @@
       "source": [
         "`-` 학습해보자."
       ],
-      "id": "a798a5c5-4b09-4bb3-9f01-cdbcf682953e"
+      "id": "d44900bd-b14f-471e-85cf-6aa96839b54b"
     },
     {
       "cell_type": "code",
@@ -1269,7 +1269,7 @@
         "# Step3:\n",
         "lrnr.fit(10)\n",
         "# Step4: \n",
-        "# 코랩사용시 아래는 주석처리할것 (코랩의 RAM이 충분하지 않음, 결재요구함) \n",
+        "# 코랩사용시 아래는 주석처리할것 (이유: 코랩의 RAM이 충분하지 않음) valiation set의 accuracy는 fastai결과로 확인할것. \n",
         "# lrnr.model.to(\"cpu\")\n",
         "# print(f'train: {(lrnr.model(X).data.argmax(axis=1) == y).float().mean():.4f}') # \n",
         "# print(f'val: {(lrnr.model(XX).data.argmax(axis=1) == yy).float().mean():.4f}')"
@@ -1293,7 +1293,7 @@
         "Classification with Deep Convolutional Neural Networks.” *Advances in\n",
         "Neural Information Processing Systems* 25."
       ],
-      "id": "fc1380e6-8927-4ee1-b95a-dea726aed02a"
+      "id": "941c5166-94cc-444a-969d-2606c9a7ef5c"
     }
   ],
   "nbformat": 4,
